--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=80
-logging.config: classpath:logback-spring.xml
+logging.config = classpath:logback-spring.xml
+penetrate.url = http://zml.vaiwan.com/
