--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=80
 logging.config = classpath:logback-spring.xml
 penetrate.url =
+baidu.ocr.appId = 
+baidu.ocr.apiKey =
+baidu.ocr.secretKey = 
