--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,23 @@
 server.port=80
 logging.config = classpath:logback-spring.xml
+# 内网穿透地址
 penetrate.url =
 baidu.ocr.appId = 
 baidu.ocr.apiKey =
 baidu.ocr.secretKey = 
+#设备密码
+device.password =
+#钉钉在主界面的X轴坐标(比例：x轴坐标/分辨率) 如0.2
+coordinate.x =
+#钉钉在主界面的Y轴坐标(比例：y轴坐标/分辨率) 如0.2
+coordinate.y =
+#钉钉密码
+ding.password =
+#内网穿透路径如：D:\\work\\pierced\\windows_64\\ding.cfg
+penetrate.path =
+#内网穿透前缀
+penetrate.prefix =
+#bark通知地址
+bark.url =
+#server酱通知地址 ***替换为SendKey
+sct.url = https://sctapi.ftqq.com/***.send
