--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
 server.port=80
 logging.config = classpath:logback-spring.xml
-# ÄÚÍø´©Í¸µØÖ·
+# å†…ç½‘ç©¿é€åœ°å€
 penetrate.url =
 baidu.ocr.appId = 
 baidu.ocr.apiKey =
 baidu.ocr.secretKey = 
-#Éè±¸ÃÜÂë
+#è®¾å¤‡å¯†ç 
 device.password =
-#¶¤¶¤ÔÚÖ÷½çÃæµÄXÖá×ø±ê(±ÈÀı£ºxÖá×ø±ê/·Ö±æÂÊ) Èç0.2
+#é’‰é’‰åœ¨ä¸»ç•Œé¢çš„Xè½´åæ ‡(æ¯”ä¾‹ï¼šxè½´åæ ‡/åˆ†è¾¨ç‡) å¦‚0.2
 coordinate.x =
-#¶¤¶¤ÔÚÖ÷½çÃæµÄYÖá×ø±ê(±ÈÀı£ºyÖá×ø±ê/·Ö±æÂÊ) Èç0.2
+#é’‰é’‰åœ¨ä¸»ç•Œé¢çš„Yè½´åæ ‡(æ¯”ä¾‹ï¼šyè½´åæ ‡/åˆ†è¾¨ç‡) å¦‚0.2
 coordinate.y =
-#¶¤¶¤ÃÜÂë
+#é’‰é’‰å¯†ç 
 ding.password =
-#ÄÚÍø´©Í¸Â·¾¶Èç£ºD:\\work\\pierced\\windows_64\\ding.cfg
+#å†…ç½‘ç©¿é€è·¯å¾„å¦‚ï¼šD:\\work\\pierced\\windows_64\\ding.cfg
 penetrate.path =
-#ÄÚÍø´©Í¸Ç°×º
+#å†…ç½‘ç©¿é€å‰ç¼€
 penetrate.prefix =
-#barkÍ¨ÖªµØÖ·
+#barké€šçŸ¥åœ°å€(ä½¿ç”¨serveé…±æ­¤é¡¹ç•™ç©º)
 bark.url =
-#server½´Í¨ÖªµØÖ· ***Ìæ»»ÎªSendKey
+#serveré…±é€šçŸ¥åœ°å€ ***æ›¿æ¢ä¸ºSendKey
 sct.url = https://sctapi.ftqq.com/***.send
